Changelog of WikiRenderer

Version 4.0

- classes with namespace
- Licence changed from LGPL to MIT
- new internal architecture : allow to separate syntax parsing and content generation
- Remove phpwiki syntax support

Version 3.1.2
- fixed bug on dokuwiki_to_xhtml rules

Version 3.1.1

- better compatibility with PHP 5.3
- fixed a notice on an undefined variable
- fixed a bug: WR3 rule didn't generate good markup when </code> was on the same line of <code>

Version 3.1

- no more PHP4 version, only PHP5
- fixed bug: / was not allowed in patterns for inline tags
- new property WikiTagXhtml::additionnalAttributes, so we can specify static attributes to add on an xhtml element
- new property WikiTagXhtml::ignoreAttribute
- escape char is now configurable
- inline parser now takes care about attribute which don't allow wiki tags in them
- renamed WikiRendererConfig::$textLineContainer to WikiRendererConfig::$defaultTextLineContainer
- new property WikiRendererConfig::$textLineContainers
- property WikiRendererConfig::$inlineTag is deprecated
- renamed WikiTag::$separator to WikiTag::$currentSeparator
- WikiTag::addContent and WikiTag::addSeparator are no more final methods
- WikiTag::addSeparator receive now the separator as  argument
- renamed WikiTag::getCurrentSeparator() to WikiTag::isCurrentSeparator($token)
- fixed a little bug when the content of a wiki tag contains only 0
- fixed default values in WikiTag
- CamelCaseWord can be ignored with a ! before the word
- support of utf8 characters in CamelCaseWord
- checkWikiWordFunction can be an array to indicate a method of an object
- new rules: wr3_to_docbook, dokuwiki_to_docbook, dokuwiki_to_xhtml,
  trac_to_xhtml, phpwiki_to_dokuwiki, jwiki_to_xhtml

Version 3.0

- fixed php5 syntax and deprecated properties
- fixed bug : error when default rule is used (wrong class name)
- fixed bug : callback function for CamelCase word was never called

Version 3.0 RC1

- Ajout d'une classe de base pour la configuration