@@ -5,7 +5,8 @@ Version 4.0
 - classes with namespace
 - Licence changed from LGPL to MIT
 - new internal architecture : allow to separate syntax parsing and content generation
-- Remove phpwiki syntax support
+- Removed phpwiki syntax support
+- Removed phorum mod
 
 Version 3.1.2
 - fixed bug on dokuwiki_to_xhtml rules
